Dumping in a bunch of content

--- a/_includes/_header.html
+++ b/_includes/_header.html
@@ -1,10 +1,29 @@
 <header id="header">
   <div class="site-width">
-    <h1>RI NEMBA</h1>
+    <img src="/images/svg/NEMBA.svg" class="logo">
+    <h1>Rhode Island</h1>
     <nav>
-      <a href="#">Link 1</a>
-      <a href="#">Link 2</a>
-      <a href="#">Link 3</a>
+      <a href="/" class="home">Home</a>
+      <a href="/rides/" class="rides">Rides</a>
+<!--       <nav class="nav-rides">
+        <a href="tuesday.html">Tuesday</a>
+        <a href="wednesday.html">Wednesday</a>
+        <a href="thursday.html">Thursday</a>
+        <a href="saturday.html">Saturday</a>
+        <a href="sunday.html">Sunday</a>
+      </nav> -->
+      <a href="/places/" class="places">Places</a>
+      <nav class="nav-places">
+        <a href="abrams-rock.html">Abram’s Rock</a>
+        <a href="arcadia-management-area.html">Arcadia Management Area</a>
+        <a href="big-river-carr-pond.html">Big River / Carr Pond</a>
+        <a href="burlingame.html">Burlingame</a>
+        <a href="lincoln-woods.html">Lincoln Woods</a>
+        <a href="north-south-trail.html">North / South Trail</a>
+        <a href="prudence-island.html">Prudence Island</a>
+        <a href="weetamoe-woods.html">Weetamoe Woods</a>
+      </nav>
+      <a href="/resources" class="resources">Resources</a>
     </nav>
   </div>
 </header>
