--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,22 +1,25 @@
 <!doctype html>
 <html>
-
   {% include _head.html %}
+  <body class="post {{ page.body-class }} no-js">
 
-  <body class="{{ page.body-class }} no-js">
-  
     <div class="wrapper">
-
+      
       {% include _header.html %}
-
+      
       <section>
+
+        <h1>{{ page.title }}</h1>
+      
         {{ content }}
+      
       </section>
-
+      
       {% include _footer.html %}
-
+    
     </div>
 
     <script src="javascripts/scale.fix.js"></script>
-    </body>
-  </html>
+
+  </body>
+</html>
