--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -27,9 +27,14 @@ h1 {
 h2 {
   color:#393939;
 }
+h2 em {
+  font-weight: normal;
+  margin: 0 .5em;
+}
 
 h3, h4, h5, h6 {
   color:#494949;
+  margin-bottom: 0;
 }
 
 a {
@@ -65,7 +70,7 @@ code, pre {
 
 pre {
   padding:8px 15px;
-  background: #f8f8f8;  
+  background: #f8f8f8;
   border-radius:5px;
   border:1px solid #e5e5e5;
   overflow-x: auto;
@@ -98,15 +103,28 @@ img {
 header {
   width:270px;
   float:left;
-  position:fixed;
+  /*position:fixed;*/
+}
+header .logo {
+  /*background: red;*/
+  margin: 0 60px;
+  width: 150px;
+}
+header h1 {
+  font-family: georgia;
+  font-size: 1.5em;
+  font-weight: normal;
+  margin: .5em;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 header ul {
   list-style:none;
   height:40px;
-  
+
   padding:0;
-  
+
   background: #eee;
   background: -moz-linear-gradient(top, #f8f8f8 0%, #dddddd 100%);
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f8f8f8), color-stop(100%,#dddddd));
@@ -114,7 +132,7 @@ header ul {
   background: -o-linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
   background: -ms-linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
   background: linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
-  
+
   border-radius:5px;
   border:1px solid #d2d2d2;
   box-shadow:inset #fff 0 1px 0, inset rgba(0,0,0,0.03) 0 -1px 0;
@@ -159,6 +177,21 @@ header ul a strong {
   color:#222;
 }
 
+header nav a {
+  display: block;
+  padding: 5px;
+}
+nav nav {
+  display: none;
+}
+.places .nav-places,
+.rides .nav-rides {
+  display: block;
+  margin-left: 1em;
+}
+nav nav a {
+  padding: 2px 5px;
+}
 section {
   width:500px;
   float:right;
@@ -177,40 +210,48 @@ hr {
 }
 
 footer {
-  width:270px;
-  float:left;
-  position:fixed;
-  bottom:50px;
+  width: 500px;
+  float: right;
+  clear: both;
+  margin-left: 270px;
+  /*position:fixed;*/
+  /*bottom:50px;*/
 }
 
+/*Posts on home page*/
+.posts .time-stamp {
+  font-weight: normal;
+}
+
+
 @media print, screen and (max-width: 960px) {
-  
+
   div.wrapper {
     width:auto;
     margin:0;
   }
-  
+
   header, section, footer {
     float:none;
     position:static;
     width:auto;
   }
-  
+
   header {
     padding-right:320px;
   }
-  
+
   section {
     border:1px solid #e5e5e5;
     border-width:1px 0;
     padding:20px 0;
     margin:0 0 20px;
   }
-  
+
   header a small {
     display:inline;
   }
-  
+
   header ul {
     position:absolute;
     right:50px;
@@ -222,15 +263,15 @@ footer {
   body {
     word-wrap:break-word;
   }
-  
+
   header {
     padding:0;
   }
-  
+
   header ul, header p.view {
     position:static;
   }
-  
+
   pre, code {
     word-wrap:normal;
   }
@@ -240,7 +281,7 @@ footer {
   body {
     padding:15px;
   }
-  
+
   header ul {
     display:none;
   }
