Update nav names

--- a/_includes/_header.html
+++ b/_includes/_header.html
@@ -4,7 +4,7 @@
     <h1>Rhode Island</h1>
     <nav>
       <a href="/" class="home">Home</a>
-      <a href="/rides/" class="rides">Rides</a>
+      <a href="/rides/" class="rides">Weekly Rides</a>
 <!--       <nav class="nav-rides">
         <a href="tuesday.html">Tuesday</a>
         <a href="wednesday.html">Wednesday</a>
@@ -12,7 +12,7 @@
         <a href="saturday.html">Saturday</a>
         <a href="sunday.html">Sunday</a>
       </nav> -->
-      <a href="/places/" class="places">Places</a>
+      <a href="/places/" class="places">Places to Ride</a>
       <nav class="nav-places">
         <a href="abrams-rock.html">Abram’s Rock</a>
         <a href="arcadia-management-area.html">Arcadia Management Area</a>
